devtools/client/themes/markup.css
/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
:
root
{
-
-
markup
-
hidden
-
attr
-
name
-
color
:
light
-
dark
(
var
(
-
-
grey
-
43
)
#
787878
)
;
-
-
markup
-
hidden
-
attr
-
value
-
color
:
light
-
dark
(
var
(
-
-
grey
-
55
)
#
a4a4a4
)
;
-
-
markup
-
hidden
-
punctuation
-
color
:
light
-
dark
(
var
(
-
-
grey
-
43
)
#
787878
)
;
-
-
markup
-
pseudoclass
-
disk
-
color
:
#
e9c600
;
-
-
markup
-
hidden
-
tag
-
color
:
light
-
dark
(
var
(
-
-
grey
-
50
)
var
(
-
-
grey
-
45
)
)
;
-
-
markup
-
outline
:
light
-
dark
(
var
(
-
-
theme
-
splitter
-
color
)
var
(
-
-
theme
-
selection
-
background
)
)
;
-
-
markup
-
drag
-
line
:
light
-
dark
(
var
(
-
-
grey
-
40
)
var
(
-
-
grey
-
55
)
)
;
-
-
markup
-
drop
-
line
:
light
-
dark
(
var
(
-
-
blue
-
55
)
var
(
-
-
blue
-
50
)
)
;
-
-
markup
-
overflow
-
causing
-
background
-
color
:
light
-
dark
(
rgba
(
128
0
215
0
.
15
)
rgba
(
148
0
255
0
.
38
)
)
;
-
-
markup
-
new
-
attr
-
size
:
2ch
;
-
-
markup
-
new
-
attr
-
focused
-
margin
-
inline
:
1ch
2px
;
-
-
markup
-
selected
-
focus
-
visible
-
non
-
highlighted
-
color
:
light
-
dark
(
var
(
-
-
theme
-
body
-
color
)
var
(
-
-
theme
-
text
-
color
-
strong
)
)
;
&
[
forced
-
colors
-
active
]
{
-
-
markup
-
hidden
-
attr
-
name
-
color
:
GrayText
;
-
-
markup
-
hidden
-
attr
-
value
-
color
:
GrayText
;
-
-
markup
-
hidden
-
punctuation
-
color
:
GrayText
;
-
-
markup
-
hidden
-
tag
-
color
:
GrayText
;
/
*
In
regular
mode
this
variable
relies
on
-
-
theme
-
body
-
color
which
is
already
set
to
CanvasText
for
HCM
BUT
:
we
still
need
to
force
it
here
because
of
Bug
1917523
*
/
-
-
markup
-
selected
-
focus
-
visible
-
non
-
highlighted
-
color
:
CanvasText
;
-
-
markup
-
drag
-
line
:
GrayText
;
-
-
markup
-
drop
-
line
:
SelectedItem
;
}
}
*
{
padding
:
0
;
margin
:
0
;
}
:
root
{
-
moz
-
control
-
character
-
visibility
:
visible
;
}
body
{
user
-
select
:
none
;
}
/
*
Force
height
and
width
(
possibly
overflowing
)
from
inline
elements
.
*
This
allows
long
overflows
of
text
or
input
fields
to
still
be
styled
with
*
the
container
rather
than
the
background
disappearing
when
scrolling
*
/
#
root
{
float
:
left
;
/
*
The
markup
view
should
always
be
LTR
*
/
min
-
width
:
100
%
;
box
-
sizing
:
border
-
box
;
&
>
ul
[
role
=
"
tree
"
]
{
/
*
Reserve
extra
space
(
in
addition
to
the
indent
size
)
for
DOM
mutation
*
breakpoint
and
pseudo
icons
.
*
/
padding
-
inline
-
start
:
6px
;
outline
-
offset
:
-
2px
;
}
}
/
*
Reset
the
global
rotation
of
the
icon
done
for
RTL
layout
.
Markup
view
is
always
LTR
*
/
#
root
.
theme
-
twisty
:
not
(
.
open
)
:
dir
(
rtl
)
#
root
.
theme
-
twisty
:
not
(
[
open
]
)
:
-
moz
-
locale
-
dir
(
rtl
)
{
transform
:
rotate
(
-
90deg
)
;
}
/
*
Don
'
t
display
a
parent
-
child
outline
for
the
root
elements
*
/
#
root
>
ul
>
li
>
.
children
{
background
:
none
;
}
html
.
dragging
{
overflow
-
x
:
hidden
;
}
body
.
dragging
.
tag
-
line
{
cursor
:
grabbing
;
}
#
root
-
wrapper
:
after
{
content
:
"
"
;
display
:
block
;
clear
:
both
;
position
:
relative
;
}
.
html
-
editor
{
display
:
none
;
position
:
absolute
;
z
-
index
:
2
;
/
*
Use
the
same
margin
/
padding
trick
used
by
.
child
tags
to
ensure
that
*
the
editor
covers
up
any
content
to
the
left
(
including
expander
arrows
*
and
hover
effects
)
.
*
/
margin
-
left
:
-
1000em
;
padding
-
left
:
1000em
;
}
.
html
-
editor
-
inner
{
border
:
solid
.
1px
;
flex
:
1
1
auto
;
/
*
Keep
the
editor
away
from
the
markup
view
floating
scrollbars
*
/
margin
-
inline
-
end
:
12px
;
}
.
html
-
editor
iframe
{
height
:
100
%
;
width
:
100
%
;
border
:
none
;
margin
:
0
;
padding
:
0
;
}
.
children
{
list
-
style
:
none
;
padding
:
0
;
margin
:
0
;
}
/
*
Tags
are
organized
in
a
UL
/
LI
tree
and
indented
thanks
to
a
left
padding
.
*
A
very
large
padding
is
used
in
combination
with
a
slightly
smaller
margin
*
to
make
sure
childs
actually
span
from
edge
-
to
-
edge
.
*
/
.
child
{
margin
-
left
:
-
10000px
;
padding
-
left
:
10011px
;
}
/
*
Normally
this
element
takes
space
in
the
layout
even
if
it
'
s
position
:
relative
*
by
adding
height
:
0
we
let
surrounding
elements
to
fill
the
blank
space
*
/
.
child
.
dragging
{
position
:
relative
;
pointer
-
events
:
none
;
opacity
:
0
.
7
;
z
-
index
:
1
;
height
:
0
;
:
root
[
forced
-
colors
-
active
]
&
{
opacity
:
1
;
z
-
index
:
2
;
}
}
/
*
Indicates
a
tag
-
line
in
the
markup
-
view
as
being
an
active
drop
target
by
*
drawing
a
horizontal
line
where
the
dragged
element
would
be
inserted
if
*
dropped
here
*
/
.
tag
-
line
.
drop
-
target
:
:
before
.
tag
-
line
.
drag
-
target
:
:
before
{
content
:
"
"
;
position
:
absolute
;
top
:
-
1px
;
height
:
2px
;
/
*
Offset
these
by
1000px
to
make
sure
they
cover
the
full
width
of
the
view
*
/
width
:
calc
(
100
%
+
1000px
)
;
left
:
-
1000px
;
background
-
color
:
var
(
-
-
markup
-
drag
-
line
)
;
}
.
tag
-
line
.
drop
-
target
:
:
before
{
background
-
color
:
var
(
-
-
markup
-
drop
-
line
)
;
}
/
*
In
case
the
indicator
is
put
on
the
closing
.
tag
-
line
the
indentation
level
*
will
become
misleading
so
we
push
it
forward
to
match
the
indentation
level
*
/
ul
.
children
+
.
tag
-
line
:
:
before
{
margin
-
left
:
14px
;
}
/
*
A
tag
line
should
have
a
height
of
16px
with
a
line
-
height
of
14px
*
(
assuming
a
font
-
size
of
11px
)
.
*
/
.
tag
-
line
{
font
-
size
:
var
(
-
-
theme
-
code
-
font
-
size
)
;
min
-
height
:
1
.
2727em
;
line
-
height
:
1
.
2727em
;
padding
-
block
:
1px
;
position
:
relative
;
cursor
:
default
;
}
/* ... */

