Bug 1328586 - [devtools] Fix contrast for attribute name in non-visible nodes. r=devtools-reviewers,jdescottes
Differential Revision: https://phabricator.services.mozilla.com/D249061

UltraBlame original commit: 67ec785c05fe3450ca2aa36da1da08ed20f5777c

--- a/devtools/client/themes/markup.css
+++ b/devtools/client/themes/markup.css
@@ -67,8 +67,6 @@ hidden
 -
 attr
 -
-name
--
 color
 :
 light
@@ -81,38 +79,16 @@ var
 -
 grey
 -
-43
+70
 )
-#
-787878
-)
-;
--
--
-markup
--
-hidden
--
-attr
--
-value
--
-color
-:
-light
--
-dark
-(
 var
 (
 -
 -
 grey
 -
-55
+30
 )
-#
-a4a4a4
 )
 ;
 -
@@ -135,10 +111,16 @@ var
 -
 grey
 -
-43
+50
 )
-#
-787878
+var
+(
+-
+-
+grey
+-
+40
+)
 )
 ;
 -
@@ -403,22 +385,6 @@ markup
 hidden
 -
 attr
--
-name
--
-color
-:
-GrayText
-;
--
--
-markup
--
-hidden
--
-attr
--
-value
 -
 color
 :
@@ -3864,37 +3830,18 @@ color
 not
 -
 displayed
+:
+is
+(
 .
 attr
 -
 name
-{
-color
-:
-var
-(
--
--
-markup
--
-hidden
--
+.
 attr
 -
-name
--
-color
+value
 )
-;
-}
-.
-not
--
-displayed
-.
-attr
--
-value
 {
 color
 :
@@ -3907,8 +3854,6 @@ markup
 hidden
 -
 attr
--
-value
 -
 color
 )
